--- a/main.css
+++ b/main.css
@@ -1,7 +1,29 @@
 body {
   background-color: #303030;
+  font-family: 'Roboto', sans-serif;
 }
 
 nav {
   background-color: #EB5757;
+  font-family: 'Open Sans', sans-serif;
+}
+
+p {
+  font-size: 10px;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1280px;
+  width: 100%;
+}
+
+@media only screen and (min-width: 601px)
+  .container {
+    width: 85%;
+}
+
+@media only screen and (min-width: 993px)
+  .container {
+    width: 70%;
 }
