--- a/main.css
+++ b/main.css
@@ -3,34 +3,40 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-nav {
+nav, .background {
   background-color: #EB5757;
   font-family: 'Open Sans', sans-serif;
 }
 
 p {
-  font-size: 0.75em;
+  font-size: 0.7em;
   overflow: hidden;
 }
 
-.caption {
+span {
   font-size: 1.2em;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .card {
-  height: 400px;
+  max-height: 300px;
+  max-width: 300px;
+  margin: 0 auto;
+  margin-bottom: 5%;
 }
 
 .image {
-  max-height: 200px;
-  min-height: 200px;
-  max-width: 100%;
+  max-height: 150px;
+  min-height: 150px;
 }
 
 .card-content {
-  max-height: 200px;
-  min-height: 200px;
+  max-height: 150px;
+  min-height: 150px;
+}
+
+.card .card-content {
+  padding: 10px;
 }
 
 .container {
@@ -40,12 +46,18 @@ p {
   width: 90%;
 }
 
-@media only screen and (min-width: 601px)
+@media only screen and (min-width: 601px) {
   .container {
     width: 85%;
+  }
+
+  .sidenav-trigger {
+    display: none;
+  }
 }
 
-@media only screen and (min-width: 993px)
+@media only screen and (min-width: 993px) {
   .container {
-    width: 70%;
+    width: 80%;
+  }
 }
